<resources>
    <string name="app_name">阅得益</string>
    <string name="network_unavailable">无可用网络</string>
    <string name="phone_number">手机号</string>
    <string name="hint_number">请输入手机号</string>
    <string name="validation">验证码</string>
    <string name="get_validation">获取验证码</string>
    <string name="hint_validation">请输入验证码</string>
    <string name="invitation">邀请码</string>
    <string name="hint_invitation">请输入邀请码</string>
    <string name="login">登录</string>
    <string name="prompt_first">点击登录/注册表示您已知晓并同意</string>
    <string name="prompt_last">《阅得益用户使用协议》</string>
    <string name="share_login">第三方登录</string>
    <string name="empty_exception">请填写完整</string>
    <string name="validation_exception">验证码有误</string>
    <string name="phone_number_exception">手机号码格式有误</string>
    <string name="invitation_exception">邀请码码格式有误</string>
    <string name="progress">正在加载 ...</string>
    <string name="agreement">用户使用协议</string>
    <string name="commit">确认</string>
    <string name="agreement_content"> 金砖国家合作机制成立十一年了，近年来，金砖国家合作机制不断完善，形成了以领导人会晤为引领，以安全事务高级代表会议、外长会晤等部长会议为支撑，多层次、多领域、全方位务实合作的机制，是新兴市场和发展中国家在经济、金融和发展领域交流与对话的重要平台，是具有广阔前景的密切协调和合作机制。金砖精神指合作共赢的精神与共商、共建、共享的金砖理念。在金砖精神的引领下，在金砖合作机制的统摄下凝聚而成的金砖力量，日益深刻地影响着世界。
    \n     金砖合作机制影响世界发展与全球经济治理。习近平主席指出，发展和多边合作两大议题是金砖合作的支柱。金砖国家均是新兴市场国家，分处四大洲，地跨南北半球，具有独特地理优势，虽国情不同、文化各异、发展模式均异，但在许多国际和地区问题上存在着相同或相似看法，都面临着经济发展和转型的长期任务，都在探索与传统西方国家不同的现代化道路，金砖国家拥有丰富的自然和人力资源，广阔的国内市场，巨大的发展潜力，充裕的政策空间</string>
    <string name="hotpage">热文</string>
    <string name="top">榜单</string>
    <string name="income">收入</string>
    <string name="mine">我的</string>
    <string name="finish">再按一次退出程序</string>
    <string name="home_page_name">首页</string>
    <string name="select">每日精选</string>
    <string name="select_promote">推广海报</string>
    <string name="select_awards_show">奖励说明</string>
    <string name="registered_all_people">总注册达人：</string>
    <string name="online_all_people">在线达人：</string>
    <string name="comprehensive">综合</string>
    <string name="news">最新</string>
    <string name="bonus_pools">奖励池</string>
    <string name="reading">阅读量</string>
    <string name="shares">分享数</string>
    <string name="shars_check">分享赚</string>
    <string name="shape_content">分享出去，有人阅读就有赚</string>
    <string name="share_wechat">微信好友</string>
    <string name="wechat_friends">微信朋友圈</string>
    <string name="qq">QQ</string>
    <string name="month_top">月榜单</string>
    <string name="quarter_top">季榜单</string>
    <string name="nick_name">用户昵称</string>
    <string name="vip_level">会员等级:</string>
    <string name="invite_code">邀请码:</string>
    <string name="upgrade_vip">升级会员</string>
    <string name="mine_account">我的账号</string>
    <string name="balance_outstanding">星豆余额</string>
    <string name="settlement_account">结算账户</string>
    <string name="settlement_content">结算说明</string>
    <string name="settlement_log">结算记录</string>
    <string name="member_center">会员中心</string>
    <string name="service_hall">服务大厅</string>
    <string name="posters">推广海报</string>
    <string name="fans">粉丝管理</string>
    <string name="security">安全认证</string>
    <string name="help_center">帮助中心</string>
    <string name="customer_service">联系客服</string>
    <string name="generalize">推广合作</string>
    <string name="setting_up">设置</string>
    <string name="settlement">结算</string>
    <string name="mine_level">我的等级</string>
    <string name="level_modle">等级制度</string>
    <string name="level_permissions">会员权限</string>
    <string name="mine_upgrade_vip">我要升级</string>
    <string name="heart">头像</string>
    <string name="nick_name_">昵称</string>
    <string name="input_nick_name">输入昵称</string>
    <string name="gender">性别</string>
    <string name="input_gender">请选择性别</string>
    <string name="form_city">所在城市</string>
    <string name="input_city">请输入城市</string>
    <string name="professional">职业</string>
    <string name="input_professional">请输入职业</string>
    <string name="expected_income">期望收入</string>
    <string name="input_expected_income">请输入期望收入(万/年)</string>
    <string name="general_input">通用文本输入</string>
    <string name="cancle">取消</string>
    <string name="the_editor">编辑</string>
    <string name="mine_content">个人资料</string>
    <string name="the_measuring_unit">万/年</string>
    <string name="safety_tips">为保证您的收益安全\n请完善以下相关信息</string>
    <string name="real_name_system">实名认证</string>
    <string name="certification_no">已认证</string>
    <string name="certification_off">未认证</string>
    <string name="trade_password">交易密码设置</string>
    <string name="complete">已完成</string>
    <string name="un_complete">已完成</string>
    <string name="settlement_account_binding">结算账户绑定</string>
    <string name="phone_number_binding">手机号绑定</string>
    <string name="wechat_binding">微信绑定</string>
    <string name="safety_certification">安全认证</string>
    <string name="input_name">请输入姓名</string>
    <string name="birthday">生日</string>
    <string name="input_birthday">请输入生日</string>
    <string name="id_card">身份证号</string>
    <string name="input_id_card">请输入身份证号</string>
    <string name="account">账号</string>
    <string name="hint_account">请输入账号</string>
    <string name="pass_word_text">密码</string>
    <string name="hint_pass_word_text">请输入密码</string>
    <string name="confirm_pass_word_text">确认密码</string>
    <string name="prompt_last_about">一个阅读分享可以赚钱的热文社区</string>
    <string name="pass_word_exception">密码格式错误</string>
    <string name="equals_exception">确认输入有异</string>
    <string name="forget_password">忘记密码</string>
    <string name="modify_the_binding">修改手机绑定</string>
    <string name="next_step">下一步</string>
    <string name="belongs_to_the_bank">所属银行</string>
    <string name="hint_bank_type">请选择所属银行</string>
    <string name="input_the_cardholder">请输入所属人</string>
    <string name="the_card_number">卡号</string>
    <string name="name_of_cardholder">持卡人姓名</string>
    <string name="input_name_of_cardholder">请输入持卡人姓名</string>
    <string name="bank_number">输入卡号</string>
    <string name="wechat_account">微信账号</string>
    <string name="the_cardholder">所属人</string>
    <string name="zhifubao_account">支付宝账号</string>
    <string name="query_empty_exception">未查到相关银行</string>
    <string name="input_account">请输入账号</string>
    <string name="bind_wechat_account">绑定微信账户</string>
    <string name="bind_bank_account">绑定银行账户</string>
    <string name="bind_zhifubao_account">绑定支付宝账户</string>
    <string name="name">姓名</string>
    <string name="zhifubao_pay">支付宝账户</string>
    <string name="bank_pay">银行卡账号</string>
    <string name="wechat_pay">微信账号</string>
    <string name="befor_open_bank">(后期开通添加银行卡账号)</string>
    <string name="pay_prompt">结算账号为星豆结算的支付账号</string>
    <string name="enter_transaction_password">请输入交易密码</string>
    <string name="forget_password_or">忘记密码?</string>
    <string name="unbind">解除绑定</string>
    <string name="progress_commit">提交中...</string>
    <string name="trade_password_exception">交易密码输入错误</string>
    <string name="bind_account">账户绑定</string>
    <string name="unbind_exception">解绑失败</string>
    <string name="immediately_upgrade">立即升级</string>
    <string name="commit_pay">确认支付</string>
    <string name="no_check_exception">当前操作无权限</string>
    <string name="vip_benefit">会员权益</string>
    <string name="settlement_number">结算数量</string>
    <string name="settlement_number_min_standard">(数量不低于20星豆)</string>
    <string name="settlement_exception">请按提示输入并选择结算账户</string>
    <string name="shares_people">分享达人</string>
    <string name="net_hot_people">网红达人</string>
    <string name="agent">经纪人</string>
    <string name="spread_company">传播公司</string>
    <string name="fans_about">粉丝总人数</string>
    <string name="people">次</string>
    <string name="generalize_content">推广合作说明</string>
    <string name="the_contact">联系人</string>
    <string name="input_the_contact">请输入联系人</string>
    <string name="contact_phone_number">联系电话</string>
    <string name="input_contact_phone_number">请输入联系电话</string>
    <string name="commit_">提交</string>
    <string name="input_exception">输入有误</string>
    <string name="personal_data">个人资料</string>
    <string name="change_the_password">修改交易密码</string>
    <string name="login_out">退出登录</string>
    <string name="setting">设置</string>
    <string name="my_invitation">我的邀请码:</string>
    <string name="copy">复制</string>
    <string name="qr_prompt">快把轻松赚钱的新分享APP分享给大家吧</string>
    <string name="replicated">已复制至剪切板</string>
    <string name="replicated_exception">复制失败</string>
    <string name="inconme_prompt">每一次分享都可以收入星豆</string>
    <string name="income_content">收入明细</string>
    <string name="money_all">总收入(星豆)</string>
    <string name="today_income">今日收入</string>
    <string name="tomonth_income">当月收入</string>
    <string name="query_exception">查询失败</string>
    <string name="income_permissions">收入权限</string>
    <string name="today">今天</string>
    <string name="income_benefit">收入权益</string>
    <string name="reading_share_reward">阅读分享奖励</string>
    <string name="level_of_increasing_returns">日收益等级</string>
    <string name="team_management_commission">团队管理佣金</string>
    <string name="advertising_investment_promotion_award">广告招商奖励</string>
    <string name="platform_incentive_activities">平台奖励活动</string>
    <string name="license_performance_income">牌照业绩收入</string>
    <string name="activities_in_progress">活动进行中</string>
    <string name="share_statistical">分享统计</string>
    <string name="read">阅读:</string>
    <string name="share">分享:</string>
    <string name="total">星豆:</string>
    <string name="fan_list">粉丝列表</string>
    <string name="my_share">我的分享</string>
    <string name="message">消息</string>
    <string name="money">星币:</string>
    <string name="complete_off">未完成</string>
    <string name="exception">未知异常</string>
    <string name="refresh_exception">刷新异常</string>
    <string name="instructions">说明</string>
    <string name="there_are_no_more">没有更多...</string>
    <string name="article_details">文章详情</string>
    <string name="bitmap_exception">邀请码生成失败</string>
    <string name="pay_status_no">支付成功</string>
    <string name="pay_status_off">支付失败</string>
    <string name="pay_status_ongoing">确认支付中</string>
    <string name="select_pay">请选择支付类型</string>
    <string name="user_herat">用户相册</string>
    <string name="not_enough_exception">用户余额不足</string>
    <string name="content">详情</string>
    <string name="current_new">当前推荐</string>
    <string name="empty_data">当前暂无数据</string>
    <string name="activities_in_progress_over">活动已结束</string>
    <string name="about">更多</string>
    <string name="old_phone_number">旧手机号</string>
    <string name="new_phone_number">新手机号</string>
    <string name="passwor_empty_exception">您还未设置交易密码</string>
    <string name="settlement_status_no">结算成功</string>
    <string name="settlement_status_off">结算失败</string>
    <string name="daily_news">文章详情</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="warm_prompt_if_realname_check">结算前需要实名认证，是否进入认证?</string>
    <string name="warm_prompt_if_realname_check_">结算前需要实名认证以及手机绑定，是否进入绑定设置?</string>
    <string name="query_log">查看记录</string>
    <string name="permissions_exception">当前用户暂无权限</string>
    <string name="version_up">发现新版本</string>
    <string name="update_notice_nomemory">内存不足</string>
    <string name="update_notice_finish">下载完成</string>
    <string name="update_notice_error">下载失败</string>
    <string name="version_down">立刻更新</string>
    <string name="input_search">输入关键词</string>
    <string name="commit_the_editor">确认编辑</string>
    <string name="search">搜索</string>
    <string name="empty_search">当前没有搜索条件</string>
    <string name="searching">搜索中 ...</string>
    <string name="my_channel">我的频道</string>
    <string name="enter_the_channel">点击进入频道</string>
    <string name="recommended_chaanel">频道推荐</string>
    <string name="enter_add_channel">点击添加频道</string>
    <string name="enter_the_the_sorting">拖拽可以排序</string>
    <string name="recommended">推荐</string>
    <string name="placed_at_the_top">置顶</string>
</resources>