<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <include layout="@layout/layout_line_clearance" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/white">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/input_name"
            android:layout_width="@dimen/dp200"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp10"
            android:gravity="center_vertical|right"
            android:hint="@string/input_name"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:background="@color/gray_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/white">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/input_gender"
            android:layout_width="@dimen/dp200"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp10"
            android:gravity="center_vertical|right"
            android:hint="@string/input_gender"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

    </RelativeLayout>

    <include layout="@layout/layout_line_clearance" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/white">

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/birthday"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/input_birthday"
            android:layout_width="@dimen/dp200"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp10"
            android:gravity="center_vertical|right"
            android:hint="@string/input_birthday"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@color/gray_light" />

    </RelativeLayout>

    <include layout="@layout/layout_line_clearance" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/white">

        <TextView
            android:id="@+id/id_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/id_card"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/input_id_card"
            android:layout_width="@dimen/dp200"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp10"
            android:gravity="center_vertical|right"
            android:hint="@string/input_id_card"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

    </RelativeLayout>


</LinearLayout>