<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_round_tools"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dp5"
    android:layout_height="100dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/select_today"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawablePadding="@dimen/dp10"
        android:drawableTop="@drawable/select_today"
        android:gravity="center|top"
        android:paddingTop="@dimen/dp10"
        android:text="@string/select"
        android:textColor="@color/black_"
        android:textSize="@dimen/dp13" />

    <TextView
        android:id="@+id/select_promote"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawablePadding="@dimen/dp10"
        android:drawableTop="@drawable/select_promote"
        android:gravity="center|top"
        android:paddingTop="@dimen/dp10"
        android:text="@string/select_promote"
        android:textColor="@color/black_"
        android:textSize="@dimen/dp13" />

    <TextView
        android:id="@+id/select_awards_show"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawablePadding="@dimen/dp10"
        android:drawableTop="@drawable/select_awards_show"
        android:gravity="center|top"
        android:paddingTop="@dimen/dp10"
        android:text="@string/select_awards_show"
        android:textColor="@color/black_"
        android:textSize="@dimen/dp13" />


</LinearLayout>